--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -1,9 +1,8 @@
 .popup {
-  width: 430px;
-  max-height: 330px;
-  position: fixed;
-  right: 41%;
-  z-index: 5;
+  z-index: 4;
+  position: absolute;
+  top: 195px;
+  left: 400px;
 }
 
 .popup__close-button {
@@ -18,25 +17,17 @@
   cursor: pointer;
 }
 
-.popup__image-button_delete {
-  top: -40px;
-  right: 60px;
-}
-
 .popup__close-button:hover {
   opacity: 0.6;
 }
 
 .popup__content {
+  max-width: 600px;
+  max-height: 450px;
   display: flex;
   flex-direction: column;
   background-color: white;
   border-radius: 10px;
-}
-
-.popup__form-content_content_image {
-  display: flex;
-  flex-direction: column;
 }
 
 .popup__form-title {
@@ -173,28 +164,60 @@
   cursor: not-allowed;
 }
 
-@media (max-width: 900px) {
-  .popup__image {
-    max-width: 616px;
+@media (max-width: 1190px) {
+  .popup {
+    left: 335px;
   }
+}
 
+@media (max-width: 1100px) {
+  .popup {
+    left: 285px;
+  }
+}
+
+@media (max-width: 900px) {
   .popup__image-button {
     left: 617px;
+  }
+
+  .popup {
+    left: 235px;
+  }
+
+  .popup__content {
+    max-width: 500px;
+    max-height: 282px;
   }
 }
 
 @media (max-width: 800px) {
-  .popup__image {
-    max-width: 433px;
-    height: 540px;
+  .popup {
+    left: 180px;
   }
 
-  .popup__image-button {
-    left: 433px;
+  .popup__content {
+    max-width: 470px;
+  }
+}
+
+@media (max-width: 700px) {
+  .popup {
+    left: 130px;
+  }
+}
+
+@media (max-width: 600px) {
+  .popup {
+    left: 90px;
   }
 }
 
 @media (max-width: 500px) {
+  .popup {
+    left: 85px;
+  }
+
   .popup__close-button {
     width: 26px;
     height: 26px;
@@ -203,8 +226,7 @@
   }
 
   .popup__content {
-    width: 300px;
-    max-height: 322px;
+    max-width: 400px;
   }
 
   .popup__form-title {
@@ -215,7 +237,7 @@
   }
 
   .popup__form-table {
-    margin-top: 76px;
+    margin-top: 25px;
   }
 
   .popup__input {
@@ -228,28 +250,52 @@
     width: 238px;
     height: 46px;
   }
+}
 
-  .popup__image {
-    max-width: 240px;
-    height: 299px;
+@media (max-width: 400px) {
+  .popup {
+    left: 45px;
   }
 
-  .popup__image-button {
-    left: 240px;
-    bottom: 10px;
-    width: 30px;
-    height: 30px;
+  .popup__content {
+    max-width: 320px;
+    max-height: 215px;
+  }
+
+  .popup__form-title {
+    margin: 18px 22px 0;
+  }
+
+  .popup__form-table {
+    margin-top: 20px;
+  }
+
+  .popup__input {
+    margin-bottom: 18px;
+  }
+
+  .popup__save-button {
+    margin: 0 auto 18px;
   }
 }
 
 @media (max-width: 320px) {
+  .popup {
+    top: 300px;
+    left: 16px;
+  }
+
   .popup__close-button {
     width: 26px;
     height: 26px;
   }
 
   .popup__content {
-    width: 282px;
-    max-height: 322px;
+    max-width: 300px;
+    max-height: 210px;
+  }
+
+  .popup__save-button {
+    height: 40px;
   }
 }
