Adicionadas as funcionalidades referentes a abertura dos popups, bem como conexão com a API

--- a/src/blocks/elements.css
+++ b/src/blocks/elements.css
@@ -59,6 +59,11 @@
 
 .element__heart-active {
   background-image: url(../images/Coração-Preto.png);
+  background-repeat: no-repeat;
+  width: 21px;
+  height: 19px;
+  margin-top: 6px;
+  background-position: center;
 }
 
 .element__trash {
